# FastAPI

./: main.py  pyproject.toml  test.sh
app/tests/: test_simple.py
