[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"

[tool.mypy]
python_version = 3.12
strict = true
plugins = [
    "pydantic.mypy"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
